  Mostly introduces typo fixes and more flexible
  Makefile options.
  The following patches are no longer needed downstream:
  20_manpage_spelling
  21_tweak_warnings
  30_interactive_regexp_match
  92_m68k_alignment
  100_show
  130_crossbuild_fixes
  150_core_string_test
  160_manual_page_update
  170_undeclared_extension
  180_maxsymlinks

- Minor update to manual page to fix typo.

-------------------------------------------------------------------
October 2018 - jsmith@resonatingmedia.com

- Added ability to run --dry-run and --show-all in addition to
  the existing --dryrun and --showall options.
  Closes Debian bug #580773
- Fixed compiler warnings when unused variables are defined in listing.h


-------------------------------------------------------------------
August 2018 - jsmith@resonatingmedia.com

- Updated insserv.c and listing.h to fix compile errors.
- Fixed Makefile so that all source dependencies are found.
- Allow CC to be defined outside of Makefile so we are not tied to GCC.
- Fixed function definitions, moved code (map_ functions) used in multiple 
  places out of insserv.c and into its own module called map.c
  Makes it easier to fix Makefile to build with modern systems/compilers.
- Cleaned up the last of the compiler errors on Clang and almost all the
  warnings from GCC.

-------------------------------------------------------------------
Sun Feb 16 19:16:10 CET 2014 - pere@hungry.com

- Next release will be 1.17.0.
- Correct manual page, refer to init(8), not nonexisting init(7).
- Fix scope after if test to match the indentation and probably the
  intended behaviour.  Patch from Debian fixing BTS #736479.
- Remove useless test checking for NULL==serv which is impossible
  after a while test check it (Coverity CID 1174105).
- Check exit value from mkdir() and report an error if it fail
  (Coverity CID 1174104).
- Make sure to check the return value from ftello() before passing it
  to posix_fadvise() (Coverity CID 1174109).